src/App.css
/* Import Bootstrap CSS first */
@import"bootstrap/dist/css/bootstrap.min.css";

/********************************* FONTS *************************************/
@font-face {
  font-family: 'Alex Brush';
  src: url('/assets/alex-brush-regular.woff2');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'Vercetti';
  src: url('/assets/Vercetti-Regular.woff2');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'Object Sans';
  src: url('/assets/ObjectSans-Regular.otf');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'Lingkawi';
  src: url('/assets/Lingkawi-South.otf');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'Right Sans';
  src: url('/assets/PPRightSans-Light.otf');
  font-weight: normal;
  font-style: normal;
}

/********************************* ROOT *************************************/
/* Apply your custom font to the html or body element */
.homepage {
  height: 100vh;
}

.homepage {
  animation: fadeInOut 1s ease-in-out;
}

@keyframes fadeInOut {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

body {
 /* background-image: url('/assets/pearl-background.jpeg'); */
 background-color: rgb(92, 17, 0) !important;
}

/********************************* HEADER *************************************/
.navbar-brand {
  color: rgb(241,  255,  241)!important;
  font-size:  25px !important;
  font-family: 'Object Sans'; /* Fallback to sans-serif if Soria is not available */
}

.navbar-buttons {
  gap:   5px;
  text-align: center; /* Space between buttons */
}

.navbar-brand.logout {
  /* Remove the default button styling */
  background: transparent; /* Transparent background */
  border: none; /* No border */
}

.home-button, .login, .logout .signup {
  flex:   1; /* Allow buttons to grow and shrink */
  text-align: center;
  /* padding:   5px   15px; */
  transition: transform  0.3s ease; /* Smooth transition for the transform property */
  will-change: transform; /* Hint to the browser that the element will be transformed */
}

.login, .logout, .signup {
  transition: transform 0.3s ease-in-out; /* Adjust time as needed */
}

.login:hover,
.logout:hover,
.signup:hover {
  transform: scale(0.95); /* Scale down the button to 95% of its original size */
}

.add-button-2:hover {
  transform: scale(0.95);
}

.home-button:hover, .holder-button:hover {
  transform: scale(0.95); /* Scale down the button to  95% of its original size */
}

.home-button {
  padding:  10px  20px; /* Adjust the values as needed */
}

.container-fluid { 
  background-color: rgb(92, 17, 0) !important;
}

/********************************* ItemsIndex *************************************/


.index-header {
  font-family: 'Object Sans';
  color: rgb(241, 255, 241)!important;
  font-size: 50px;
  padding-bottom: 75px;
  padding-top: 100px;
  text-align: center;
}

.custom-card-font {
  font-family: 'Object Sans', Arial, sans-serif; /* Use 'Arial' or another generic font as a fallback */
  text-align: center;
}

.card-title.card-title-custom {
  color: black; /* Replace with the actual color code you want to use */
}

.item-title {
  color: rgb(241, 255, 241);
  font-family: 'Object Sans';
  font-size: 100px;
}

.item-content {
  font-family: 'Object Sans';
  color: rgb(241, 255, 241);
  padding: 150px 25px 0px 25px;
  font-size: 30px;
  animation: fadeInOut 1s ease-in-out;
}


.image-wrapper img {
  width:  50%;
  height: auto;
  object-fit:contain; /* This will make sure the image covers the container fully */
  object-position: center;
  padding-top: 25px; /* This will center the image within its container */
}

.card {
  display: flex;
  width: 600px; /* Fixed width */
  height: 80%; /* Fixed height */
  margin: auto; /* Center the card if inside a flexbox or grid */
}

.cards {
  display: flex;
  flex: 1 0 100%; /* Adjust flex-basis as per requirement */
  justify-content: center; /* Center cards when fewer in number */
  max-width: 400px; /* Or any maximum width */
  min-width: 300px;
}

.card-img-container {
  width: 100%; /* Full width of the card */
  padding-top: 56.25%; /* Aspect ratio of 16:9 */
  position: relative; /* For absolute positioning of the image inside */
  overflow: hidden; /* Ensure no part of the image spills out */
}

.card-img-top {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover; /* Scales the image to cover the container */
}





.add-button-2 {
  font-family: 'Object Sans';
  padding-bottom: 50px !important;
  color: #fff;
  text-decoration: none;
  font-size: 50px;
  transition: transform  0.3s ease; /* Smooth transition for the transform property */
  will-change: transform;
}

.homepage-text {
  font-size: 400px;
  font-family: 'Lingkawi';
  text-align: center;
  color: rgb(223, 252, 223);
  padding-top: 240px;
}

.login-form {
  padding-top: 100px;
  color: white;
}

.login-text {
  font-family: 'Object Sans';
  text-align: center;
}

.form-container {
  font-family: 'Object Sans';
  max-width:  400px; /* Adjust this value to your preference */
  margin:  0 auto; /* Center the form container horizontally */
}

.signup-form {
  padding-top: 100px;
  color: #fff;
}

.signup-text {
  font-family: 'Object Sans';
  text-align: center;
}

.message {
  text-align: center; /* Center the text */
  margin-bottom:  1rem; /* Add some space below the message */
}

.logout-success-message {
  text-align: center;
  color: rgb(255, 255, 255); /* Change the color to indicate success */
  font-weight: bold;
  margin-top:  1rem; /* Adjust the spacing as needed */
}

.index-header {
  font-family: 'Object Sans';
  text-decoration: underline;
}

/********************************* ItemPage *************************************/


.new-item-form {
  width: 300px;
  color: antiquewhite;
  text-align: center;
  margin: 0 auto; 
  padding-top: 25px;
} 

.new-item-header-container {
  display: flex; /* Use Flexbox */
  justify-content: center; /* Center horizontally */
  padding-top: 100px;
  color: antiquewhite;
  font-family: 'Object Sans';
  text-decoration: underline;
}

.new-item:hover {
  transform: scale(0.8);
}

.new-item {
  transition: transform  0.3s ease; /* Smooth transition for the transform property */
  will-change: transform; /* Hint to the browser that the element will be transformed */
}

.custom-edit-button {
  background: transparent;
  border-radius:  10px;
  border:  2px solid #fff; /* Added border-style and border-color */
  color: rgb(255,  255,  255);
  font-size: 18px;
}

.button-container {
  display: flex; /* Stack items vertically */
  justify-content: baseline; 
  padding-bottom: 20px;
}


.delete-button {
  background: transparent;
  border-radius:  10px;
  border-color: rgb(255,  255,  255); /* This is the color of the border */
  border-style: solid; /* Set the border style to solid */
  border-width:  2px; /* Set the border width */
  color: rgb(255,  255,  255);
  font-size:  18px;
}


/* Optionally, if you want to stack them vertically on small screens, you can use media queries */
@media (max-width:  600px) {
  .button-container {
    flex-direction: column; /* Stacks the buttons vertically */
  }
}

.center-container {
  position: absolute;
  top: 800px; /* Adjust this value to move the container up or down */
  left: 50%; /* Center horizontally */
  transform: translateX(-50%); /* Center horizontally */
  display: flex;
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
}



.update-item-form {
  width: 50%;
}

.update-item-header-container {
  text-decoration: underline;
  padding-top: 25px;
  padding-bottom: 10px;
}



body, button, a, input {
  cursor: none !important;
}

#custom-cursor {
  position: fixed;
  width: 20px; /* Customize as needed */
  height: 20px; /* Customize as needed */
  background-color: black; /* Customize as needed */
  border-radius: 50%;
  pointer-events: none;
  z-index: 10000;
  display: none;
  transform: translate(-50%, -50%); /* Adjust the cursor position */
}

/* CustomCursor.css */
#custom-cursor.hovered {
  /* Example hover state changes */
  transform: scale(1.5); /* Make the cursor larger when hovering */
  background-color: red; /* Change cursor color on hover */
}

